-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 20
-
Component/s: hotspot
-
b17
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8310339 | 17.0.9 | William Kemper | P4 | Resolved | Fixed | b01 |
Tests that failed are:
java/lang/management/ThreadMXBean/LockedSynchronizers.java
java/lang/management/ThreadMXBean/MyOwnSynchronizer.java
Frequency of failure is around 1/10.
Reason for the failure is the following assertion:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/shenandoahBarrierSet.inline.hpp:246
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/asmehra/data/ashu-mehra/jdk/src/hotspot/share/gc/shenandoah/shenandoahBarrierSet.inline.hpp:246), pid=1427500, tid=1427517
# Error: Shenandoah assert_not_in_cset failed; Object should not be in collection set
Referenced from:
interior location: 0x00007fc020003280
outside of Java heap
0x00007fc020003280 points into unknown readable memory: 0x0000000000000000 | 00 00 00 00 00 00 00 00
Object:
0x00000000d01b6840 - klass 0x0000000800215ed8 java.util.concurrent.locks.ReentrantLock$NonfairSync
not allocated after mark start
not after update watermark
marked strong
not marked weak
in collection set
mark: mark(is_neutral no_hash age=0)
region: | 6|CS |BTE d0180000, d01bff00, d01c0000|TAMS d01bff00|UWM d01bff00|U 255K|T 255K|G 0B|S 0B|L 49040B|CP 0
Forwardee:
(the object itself)
java/lang/management/ThreadMXBean/LockedSynchronizers.java
java/lang/management/ThreadMXBean/MyOwnSynchronizer.java
Frequency of failure is around 1/10.
Reason for the failure is the following assertion:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/shenandoahBarrierSet.inline.hpp:246
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/asmehra/data/ashu-mehra/jdk/src/hotspot/share/gc/shenandoah/shenandoahBarrierSet.inline.hpp:246), pid=1427500, tid=1427517
# Error: Shenandoah assert_not_in_cset failed; Object should not be in collection set
Referenced from:
interior location: 0x00007fc020003280
outside of Java heap
0x00007fc020003280 points into unknown readable memory: 0x0000000000000000 | 00 00 00 00 00 00 00 00
Object:
0x00000000d01b6840 - klass 0x0000000800215ed8 java.util.concurrent.locks.ReentrantLock$NonfairSync
not allocated after mark start
not after update watermark
marked strong
not marked weak
in collection set
mark: mark(is_neutral no_hash age=0)
region: | 6|CS |BTE d0180000, d01bff00, d01c0000|TAMS d01bff00|UWM d01bff00|U 255K|T 255K|G 0B|S 0B|L 49040B|CP 0
Forwardee:
(the object itself)
- backported by
-
JDK-8310339 Shenandoah: ThreadMXBean synchronizer tests crash with aggressive heuristics
-
- Resolved
-