8293252: Shenandoah: ThreadMXBean synchronizer tests crash with IU+aggressive mode

Signed-off-by: Ashutosh Mehra <asmehra@redhat.com>